--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Mi portafolio JRM</title>
+        <title>Mi portafolio PSM</title>
         <link rel="stylesheet" href="style.css" />
     </head>
     <body data-theme="light">
         <div class="page">
             <header class="top-bar">
                 <div class="brand">
-                    <span class="brand__tag">JRM</span>
-                    <h1 class="brand__title">Jesús Jair Ramírez Mejía</h1>
+                    <span class="brand__tag">PSM</span>
+                    <h1 class="brand__title">Patricia Violeta Salazar Motta</h1>
                 </div>
                 <nav class="top-actions">
                     <button
@@ -39,7 +39,7 @@
                     <div class="hero-copy">
                         <span class="eyebrow">bienvenido</span>
                         <h2 class="hero-title">
-                            Hola, soy <strong>Jesús Jair Ramírez Mejía</strong>, desarrollador web especializado en frontend, backend, QA/Testing y automatización de calidad.
+                            Hola, soy <strong>Patricia Violeta Salazar Motta</strong>, desarrollador web especializado en frontend, backend, QA/Testing y automatización de calidad.
                         </h2>
                         <p class="hero-text">
                             Aplico metodologías de control de calidad, observabilidad, análisis estático y CI/CD para entregar productos escalables, seguros y mantenibles. Integro conocimientos en electrónica industrial para potenciar la automatización y la integración entre software y hardware.
