Update personal information and contact details

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <div class="hero-copy">
                         <span class="eyebrow">bienvenido</span>
                         <h2 class="hero-title">
-                            Hola, soy <strong>Patricia Violeta Salazar Motta</strong>, desarrollador web especializado en frontend, backend, QA/Testing y automatización de calidad.
+                            Hola, soy <strong>Patricia Violeta Salazar Motta</strong>, Estudiante de la carrera de Arquitectura de Plataformas y Servicios de Tecnologías de información.
                         </h2>
                         <p class="hero-text">
                             Aplico metodologías de control de calidad, observabilidad, análisis estático y CI/CD para entregar productos escalables, seguros y mantenibles. Integro conocimientos en electrónica industrial para potenciar la automatización y la integración entre software y hardware.
@@ -51,7 +51,7 @@
                             </a>
                             <a
                                 class="icon-button"
-                                href="https://linkedin.com/in/jairramirezmejia"
+                                href="https://web.facebook.com/violeta.salazar.818050?locale=es_LA"
                                 target="_blank"
                                 rel="noopener noreferrer"
                                 aria-label="LinkedIn de Jesús Jair Ramírez Mejía">
@@ -247,11 +247,11 @@
                     <h3>Hablemos de tu siguiente proyecto</h3>
                     <p class="muted">
                         Datos de contacto<br />
-                        jair.ramirez.dev@gmail.com<br />
-                        Áncash, Perú · +51 983 070 044
+                        psalazarvmotta@gmail.com<br />
+                        Áncash, Perú · +51 948 264 499
                     </p>
                     <div class="contact-links">
-                        <a href="mailto:jair.ramirez.dev@gmail.com">Correo directo</a>
+                        <a href="mailto:psalazarvmotta@gmail.com">Correo directo</a>
                         <a href="https://linkedin.com/in/jairramirezmejia" target="_blank" rel="noopener noreferrer">LinkedIn</a>
                         <a href="https://github.com/jairramirezmejia" target="_blank" rel="noopener noreferrer">GitHub</a>
                     </div>
@@ -259,7 +259,7 @@
             </main>
 
             <footer class="footer">
-                Diseñado por <span>Jesús Jair Ramírez Mejía</span> con <span aria-label="pasión">❤️</span> usando
+                Diseñado por <span>Patricia Violeta Salazar Motta</span> con <span aria-label="pasión">❤️</span> usando
                 HTML, CSS Grid y Flexbox. Conecta conmigo en
                 <a href="https://linkedin.com/in/jairramirezmejia" target="_blank" rel="noopener noreferrer">LinkedIn</a>.
             </footer>
