--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </div>
                     <div class="hero-avatar">
                         <img
-                            src="https://images.unsplash.com/photo-1524504388940-b1c1722653e1?auto=format&fit=crop&w=400&q=80"
+                            src="https://previews.123rf.com/images/luzazure/luzazure2308/luzazure230876235/211926386-girl-working-on-a-laptop-at-night-in-a-dark-room-3d-rendering.jpg"
                             alt="Retrato fotográfico con fondo neutro"
                             loading="lazy" />
                     </div>
