Update hero avatar image source in index.html

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </div>
                     <div class="hero-avatar">
                         <img
-                            src="https://previews.123rf.com/images/luzazure/luzazure2308/luzazure230876235/211926386-girl-working-on-a-laptop-at-night-in-a-dark-room-3d-rendering.jpg"
+                            src="https://png.pngtree.com/png-clipart/20240316/original/pngtree-duck-cartoon-illustration-png-image_14607124.png"
                             alt="Retrato fotográfico con fondo neutro"
                             loading="lazy" />
                     </div>
