Update hero text in index.html

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                             Hola, soy <strong>Patricia Violeta Salazar Motta</strong>, Estudiante de la carrera de Arquitectura de Plataformas y Servicios de Tecnologías de información.
                         </h2>
                         <p class="hero-text">
-                            Aplico metodologías de control de calidad, observabilidad, análisis estático y CI/CD para entregar productos escalables, seguros y mantenibles. Integro conocimientos en electrónica industrial para potenciar la automatización y la integración entre software y hardware.
+                            Fusiono la creatividad del diseño arquitectónico con la precisión tecnológica para desarrollar entornos digitales inteligentes. Exploro la interconexión entre software, hardware y comunicación, buscando innovar en la forma en que las TIC mejoran los espacios y la experiencia cotidiana.
                         </p>
                         <div class="hero-actions">
                             <a class="icon-button" href="#cv" aria-label="Ver CV completo">
