Update Facebook link to GitHub link

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             </a>
                             <a
                                 class="icon-button"
-                                href="https://web.facebook.com/violeta.salazar.818050?locale=es_LA"
+                                href="https://github.com/PaMotta04"
                                 target="_blank"
                                 rel="noopener noreferrer"
                                 aria-label="GitHub de Jesús Jair Ramírez Mejía">
