Update contact information and links in index.html

--- a/index.html
+++ b/index.html
@@ -86,15 +86,15 @@
                         <p><strong>Ubicación:</strong> Áncash, Perú</p>
                         <p>
                             <strong>Correo:</strong>
-                            <a href="mailto:jair.ramirez.dev@gmail.com">jair.ramirez.dev@gmail.com</a>
+                            <a href="mailto:psalazarvmotta@gmail.com">psalazarvmotta@gmail.com</a>
                         </p>
                         <p>
                             <strong>LinkedIn:</strong>
-                            <a href="https://linkedin.com/in/jairramirezmejia" target="_blank" rel="noopener noreferrer">linkedin.com/in/jairramirezmejia</a>
+                            <a href="https://www.linkedin.com/feed/" target="_blank" rel="noopener noreferrer">linkedin.com/in/patriciasalazarm</a>
                         </p>
                         <p>
                             <strong>GitHub:</strong>
-                            <a href="https://github.com/jairramirezmejia" target="_blank" rel="noopener noreferrer">github.com/jairramirezmejia</a>
+                            <a href="https://github.com/PaMotta04/miPortafolio/edit/main/index.html" target="_blank" rel="noopener noreferrer">github.com/patriciasalazarm</a>
                         </p>
                         <p><strong>Teléfono:</strong> +51 948 264 499</p>
                     </div>
