Update GitHub link to point to profile

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         </p>
                         <p>
                             <strong>GitHub:</strong>
-                            <a href="https://github.com/PaMotta04/miPortafolio/edit/main/index.html" target="_blank" rel="noopener noreferrer">github.com/patriciasalazarm</a>
+                            <a href="https://github.com/PaMotta04" target="_blank" rel="noopener noreferrer">github.com/patriciasalazarm</a>
                         </p>
                         <p><strong>Teléfono:</strong> +51 948 264 499</p>
                     </div>
